public/stylesheets/master.css
body {
    padding-top: 40px;
    padding-bottom: 20px;
}

.topbar .sign_twitter {
    display: block;
    background-image: url("/images/signin_twitter.png");
    background-position: 0 0;
    width: 150px;
    height: 22px;
    margin: 10px;
    padding: 0;
}

.topbar .sign_twitter:hover {
    background-position: 0 22px;
}

.topbar .sign_twitter:active {
    background-position: 0 46px;
}

#search_form_container {
    margin: 0 auto;
    width: 25em;
}

#search_results {
    list-style-type: none;
}

#search_results table td form {
    margin: 0;
    padding: 0;
    float: right;
}

.loading {
    background-image: url('/images/loading.gif');
    background-repeat: no-repeat;
    margin: 0 auto;
    width: 400px;
    height: 400px;
}

#content {
    padding-top: 30px;
}

.staging {
    width: 50em;
    text-align: justify;
}

.centered {
    margin: 0 auto;
}

#change_list {
    list-style-type: circle;
    font-size: 0.85em;
}

.align-center {
    text-align: center;
}

.books_table {
    width: 100%;
}

.books_table .image {
    float: left;
    padding-right: 20px;
}

.books_table .image img {
    width: 80px;
}

.books_table li {
    overflow: auto;
}

.app_info {
    margin: 0 auto;
    width: 500px;
    margin-bottom: 20px;
    height: 35px;
    top: -30px;
    right: -450px;
    border-bottom: 1px solid #000;
    border-left: 1px solid #000;
    border-right: 1px solid #000;

    -webkit-box-shado:w 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
}

div.editorial_review span.control a {
    cursor: pointer;
}

.hidden {
    display: none;
}

div.avatar {
    border: 1px solid #ccc;
    padding: 5px 5px 5px 5px;
    width: 48px;
    height: 48px;
    float: left;
    margin-right: 15px;
}

div.header {
    margin-bottom: 30px;
}

li.user {
    padding: 5px 5px 5px 5px;
    height: 64px;
    vertical-align: middle;
    margin-right: 15px;
}

li.user:hover {
    background-color: #eee;
}

.search-item {
    padding: 10px 5px 5px 10px;
    border: 1px solid #eee;
    margin-bottom: 5px;
}

img.block {
    display: block;
    margin: auto;
}

.border {
    border: 1px solid #000;
}

